--- a/assets/ch.html
+++ b/assets/ch.html
@@ -8,7 +8,7 @@
 </head>
 <body> 
  <header>
-   <h2>contact:9289240008<br>
+   <h2>Contact:9289240008<br>
    Tele-phone:080-9989
    </h2>
     <h1><b> Mekkekttu Temple</b></h1>
@@ -22,7 +22,7 @@
             </ul>
             <h4><a href="index.html" target="_blank">
             </a>
-         <img src="kkkkk.png" width="50" height="50" alt="initial-scale"></h4>
+         <img src="kkkkk.png" width="10" height="15" alt="initial-scale"></h4>
     </nav>
     </header>
  <section id="about">
@@ -84,6 +84,8 @@
     </p>
     <a href="#">back</a>
     </section>   
+
+    
  <section id="gallery">
     <ul><h2> Images gallery</h2></ul>
     <p> this sectiom about</p>
@@ -131,8 +133,19 @@
    <a href="https://www.google.com/maps/place/Mekekattu+Nandikeshwara+Temple+Rd,+Karnataka+576210/@13.5250746,74.787269,17z/data=!3m1!4b1!4m6!3m5!1s0x3bbc99fb825e45e5:0x98e0b49e00d7c7b1!8m2!3d13.5250746!4d74.787269!16s%2Fg%2F1q5blmxcq?entry=ttu">Getdirection</a><br>
    <a href="#">back</a>
  </section>
+ 
+ <label >
+  <form>
+    name:<input type="text"
+    ><br>
+    e-mail<input type="text"><br>
+    contact<input type="text"><br>
+    <input type="submit">
+  </form>
+ </label>
+
  <footer>
-   <p>&copy; 2024 templeproject. All rights reserved to acharyakarthi</p>
+   <p>&copy; 2024 MekkekttuTemple. All rights reserved to acharyakarthi</p>
 </footer>  
 
 </body>
